--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 varconnect-current/.DS_Store
 varconnect-current/.DS_Store
 varconnect-current/.DS_Store
+varconnect-current/.DS_Store
+varconnect-current/.DS_Store
