--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ varconnect-current/.DS_Store
 varconnect-current/.DS_Store
 varconnect-current/.DS_Store
 varconnect-current/.DS_Store
+varconnect-current/.DS_Store
