--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ varconnect-current/sample-scansource.json
 varconnect-current/sample-servicereq.json
 varconnect-current/sample-scansource.json
 varconnect-current/.DS_Store
+varconnect-current/.DS_Store
